--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ h1 {
 }
 section {
     display: flex;
+    margin-bottom: 90px;
+    padding-top: 40px;
 }
 .top-banner {
     background: url(./images/top-banner.png);
@@ -23,7 +25,7 @@ section {
 .half-width img {
     width: 80%;
 }
-.hireme-button {
+.link-button {
     text-decoration: none;
     background: linear-gradient(90deg, orange, tomato);
     padding: 10px 40px;
@@ -32,4 +34,12 @@ section {
     font-weight: 700;
     margin-top: 20px;
     display: inline-block;
+}
+.dream-big {
+    background: url(./images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.dream-big h2 {
+    font-size: 40px;
 }
