--- a/style.css
+++ b/style.css
@@ -9,14 +9,14 @@ h1 {
     color: orange;
     font-size: 64px;
 }
-section {
+.flexible-container {
     display: flex;
-    margin-bottom: 90px;
-    padding-top: 40px;
+    margin-bottom: 130px;
 }
 .top-banner {
     background: url(./images/top-banner.png);
     background-repeat: no-repeat;
+    padding-top: 60px;
 }
 .half-width {
     width: 50%;
@@ -40,6 +40,36 @@ section {
     background-repeat: no-repeat;
     background-position: right;
 }
-.dream-big h2 {
+.half-width h2 {
     font-size: 40px;
+}
+.experience {
+    background: url(./images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.experience h1 {
+    padding-left: 5%;
+}
+.experience .half-width {
+    padding: 0 20px 10px;
+    margin: 0 3% 0 5%;
+    box-shadow: 5px 5px 20px rgba(0,0,0,.8);
+    border-radius: 5px;
+}
+.experience .half-width h3 {
+    color: orange
+}
+#full-stack {
+    border-left: 7px solid transparent;
+    border-image: linear-gradient(180deg, skyblue, blue);
+    border-image-slice: 1;
+}
+#baby-developer {
+    border-left: 7px solid transparent;
+    border-image: linear-gradient(180deg, yellow, tomato);
+    border-image-slice: 1;
+}
+footer p {
+    text-align: center;
 }
